objects/ccrz__E_CompositeProduct__c.object
<CustomObject>
    <description>Object used to hold mappings of parent products to child products.  This relationship is used in the case of bundles, kits and aggregated products.</description>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Composite Products</relationshipLabel>
        <relationshipName>Composite_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The child product that is part of the bundle, kit or aggregated product</description>
        <label>Component</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Composite Products (Component)</relationshipLabel>
        <relationshipName>Composite_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CompositeProductId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External reference id</description>
        <externalId>true</externalId>
        <label>Composite Product Ext Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Composite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The main product - this would be the bundle, kit or aggregated main product</description>
        <label>Composite</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Composite Products</relationshipLabel>
        <relationshipName>CompositeProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DescriptionRT__c</fullName>
        <description>Rich text field for the composite description.</description>
        <label>DescriptionRT</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Description__c</fullName>
        <description>Holds any informational text describing the composite&apos;s relationship with its parent product.</description>
        <inlineHelpText>Holds any informational text describing the composite&apos;s relationship with its parent product.</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtendedPrice__c</fullName>
        <description>Deprecated</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in the event that a child of an bundle, kit or aggregated product is itself a bundle, kit or aggregated product.</description>
        <label>Parent</label>
        <referenceTo>ccrz__E_CompositeProduct__c</referenceTo>
        <relationshipLabel>Child Composite Products</relationshipLabel>
        <relationshipName>ChildCompositeProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maps this component to a related product grouping.  This is primarily utilized in the case of dynamic kits, where the composite products are grouped together into separate steps or sections.</description>
        <inlineHelpText>Maps this component to a related product grouping.  This is primarily utilized in the case of dynamic kits, where the composite products are grouped together into separate steps or sections.</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ccrz__E_RelatedProductGroup__c</referenceTo>
        <relationshipLabel>CC Composite Products</relationshipLabel>
        <relationshipName>CC_Composite_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of the child item included in the kit or bundle.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Sequence aggregates should be displayed to the customer</description>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CC Composite Product</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Composite__c</columns>
        <columns>ccrz__Component__c</columns>
        <columns>ccrz__Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Composite Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Composite Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>